--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,13 @@
 spring.application.name=movies-api
-
-# SQLite Configuration
 spring.datasource.url=jdbc:sqlite:movies.db
 spring.datasource.driver-class-name=org.sqlite.JDBC
 spring.jpa.database-platform=org.hibernate.community.dialect.SQLiteDialect
-
-# JPA Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-
-# Server Configuration
 server.port=8080
-
-# Logging Configuration
 logging.level.org.springframework=INFO
 logging.level.com.example.moviesapi=DEBUG
+api.pagination.max-page-size=50
+api.pagination.default-page-size=10
+api.pagination.min-page-number=0
