--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,17 @@ spring.jpa.database-platform=org.hibernate.community.dialect.SQLiteDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
 server.port=8080
+
+# Logging configuration
 logging.level.org.springframework=INFO
 logging.level.com.example.moviesapi=DEBUG
-api.pagination.max-page-size=50
-api.pagination.default-page-size=10
+
+# Pagination settings
+api.pagination.max-page-size=100
+api.pagination.default-page-size=20
 api.pagination.min-page-number=0
+api.pagination.one-indexed-parameters=false
+api.pagination.page-parameter-name=page
+api.pagination.size-parameter-name=size
